--- a/boddea/css/style.css
+++ b/boddea/css/style.css
@@ -1685,6 +1685,11 @@ p {
   .clients__box {
     margin-top: 40px;
   }
+  .clients .slick-arrow:hover {
+    background: #E97A00 url(../img/slide_arrow.svg) 45% 50% no-repeat;
+    background-size: 14px;
+    border: 2px solid #FF9D32;
+  }
   .advantage {
     padding: 50px 0 60px;
   }
